[package]
name = "win-c-hjkl"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-icon = "0.18"
image = "0.25"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
] }
